--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -1,4 +1,5 @@
-FROM python:2.7
+FROM python:3.7
+MAINTAINER olzhabay <olzhabay.i@gmail.com>
 COPY simple_server.py /
 EXPOSE 8080
 CMD python simple_server.py
